Fix dropdown being cut off by CSS rules
- Removed old document
- Fix logout action in dropdown

--- a/assets/sass/common/_header.sass
+++ b/assets/sass/common/_header.sass
@@ -7,7 +7,6 @@
   top: 0
   left: 0
   z-index: 9999
-  overflow: hidden
   .logo
     width: 350px
     padding: 10px 0 10px 50px
